@@ -7,10 +7,10 @@
   <body>
     <h1>PostgreSQL Extension Network API</h1>
     <p>This is the PGXN API server. You probably
-    want <a href="http://www.pgxn.org/">PGXN</a>. Or if you want to upload a
+    want <a href="http://pgxn.org/">PGXN</a>. Or if you want to upload a
     distribution to PGXN, use <a href="http://manager.pgxn.org/">PGXN
-    Manager</a>. Eventually this page will point to the PGXN API
-    documentation, but for the moment, it hasn't been written yet. Please come
-    again!</p>
+    Manager</a>. If you actually want to use the PGXN API, you might
+    want to have a look at <a href="https://github.com/pgxn/pgxn-api/wiki">the
+    documentation</a>.</p>
   </body>
 </html>
